Claim Page Heading Buttons Alignment Fix.

--- a/rule_engine/rcm-client-app/src/app/billing-claims/billing-claims.component.scss
+++ b/rule_engine/rcm-client-app/src/app/billing-claims/billing-claims.component.scss
@@ -380,10 +380,6 @@
         margin-top: 0px;
     }
 
-    .claim-steps-btn {
-        top: 70px !important;
-    }
-
 }
 
 @keyframes animateleft {
@@ -811,7 +807,7 @@ a.Read {
 .cp-url-btn {
     position: fixed;
     right: 155px;
-    top: 75px;
+    top: 64px;
     width: 106px;
     z-index: 9999;
     display: inline-block;
@@ -822,7 +818,7 @@ a.Read {
     font-size: 12px !important;
     position: fixed;
     right: 136px;
-    top: 54px;
+    top: 97px;
     width: 106px;
     z-index: 9999;
     display: inline-block;
